Overhaul with ndlib-cdk stuff.

--- a/package.json
+++ b/package.json
@@ -29,44 +29,42 @@
     "sync": "npx ts-node --prefer-ts-exts scripts/sync.ts"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.100.0",
+    "@aws-cdk/assert": "1.111.0",
     "@types/jest": "^26.0.10",
-    "@types/nock": "^11.1.0",
     "@types/node": "10.17.27",
     "@types/source-map-support": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
-    "aws-cdk": "1.100.0",
+    "aws-cdk": "1.111.0",
     "aws-sdk": "^2.885.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "jest": "^26.4.2",
-    "prettier": "^2.2.1",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "1.100.0",
-    "@aws-cdk/aws-codebuild": "1.100.0",
-    "@aws-cdk/aws-codepipeline": "1.100.0",
-    "@aws-cdk/aws-codepipeline-actions": "1.100.0",
-    "@aws-cdk/aws-iam": "1.100.0",
-    "@aws-cdk/aws-logs": "1.100.0",
-    "@aws-cdk/aws-route53": "1.100.0",
-    "@aws-cdk/aws-s3": "1.100.0",
-    "@aws-cdk/aws-ssm": "1.100.0",
-    "@aws-cdk/core": "1.100.0",
-    "@ndlib/ndlib-cdk": "1.7.0",
+    "@aws-cdk/aws-apigateway": "1.111.0",
+    "@aws-cdk/aws-certificatemanager": "1.111.0",
+    "@aws-cdk/aws-codebuild": "1.111.0",
+    "@aws-cdk/aws-codepipeline": "1.111.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.111.0",
+    "@aws-cdk/aws-iam": "1.111.0",
+    "@aws-cdk/aws-lambda": "1.111.0",
+    "@aws-cdk/aws-logs": "1.111.0",
+    "@aws-cdk/aws-route53": "1.111.0",
+    "@aws-cdk/aws-s3": "1.111.0",
+    "@aws-cdk/aws-ssm": "1.111.0",
+    "@aws-cdk/core": "1.111.0",
+    "@aws-cdk/custom-resources": "1.111.0",
+    "@ndlib/ndlib-cdk": "1.9.2",
     "source-map-support": "^0.5.16"
   },
   "engines": {
