Improve error handling on sync script and fix a few linting issues.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "aws-cdk": "1.111.0",
     "aws-sdk": "^2.885.0",
     "babel-eslint": "^10.1.0",
+    "chalk": "^4.1.1",
     "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
